Release ...
* ls: If the target file name contained in a symbolic link is empty, print
  nothing (instead of "?") with the -l option etc.

Release 050309
* find: The -anewer and -cnewer primaries were introduced.
* ps: The /usr/ucb version now uses eight columns for the USER field as the
  historic versions do (Bugreport by Matthew Fischer).
* od: When the -C option was used with an empty input file, a division by
  zero caused a core dump (Patch by Matthew Fischer).
* touch: For the SVID versions, the first non-option argument is treated
  as a time specification if it starts with a digit, regardless of the
  following characters.
* join: If a join field does not exist, substitute the empty string for it.
* ed: With the SVID4 and POSIX versions, matches of zero length in substitute
  commands do no longer lead to endless loops.
* mkdir, mkfifo: When the -m option is given with a symbolic mode that has
  no 'who' part, the umask is now respected with the POSIX versions.
* chmod: When the -m option is given with a symbolic mode that has no 'who'
  part, the umask is now respected with the POSIX versions even if the
  previous file mode contained bits set within the umask.
* fmt: Trailing blanks were left on lines with multibyte characters (Patch
  by Matthew Fischer).
* The value 255 is now accepted in interval expressions in traditional
  (simple) regular expressions.
* find: The expression '-type D' matches Solaris door files.
* copy, cp, cpio, file, find, ls: Handle HP-UX network special files.
* cp: If both the -i and the -r or -R option are given, the traditional
  versions prompt for confirmation before copying to an existing directory.
* cp: A SVID4 version was introduced which behaves like the SVID3 version
  in the above respect but does not disable -i if standard input is not a
  terminal.
* cpio, pax, tar: Any filename that forms a valid UTF-8 string is now
  accepted as input when creating a pax format archive.