@@ -217,11 +217,13 @@ STRIP = strip -s -R .comment -R .note
 LARGEF = -D_FILE_OFFSET_BITS=64L
 
 #
-# We prefer symbolic links between files. If you want hard links, use
-# plain ln here, but all personality directories must be on the same
-# device then.
+# Use this if you prefer symbolic links between installed files.
 #
 LNS = ln -s
+#
+# Use this if you prefer hard links between installed files.
+#
+#LNS = $(SHELL) -c "if cd \`dirname \$$2\`; then ln \$$1 \$$2; fi" dummy
 
 #
 # Yacc implementations known to work with the Heirloom Toolchest are
